<?xml version="1.0"?>
<package format="3">
  <name>nav2_navigator</name>
  <version>0.0.0</version>
  <description>Nav2 navigator for maze traversal</description>
  <maintainer email="user@todo.todo">user</maintainer>
  <license>TODO</license>
  <depend>rclpy</depend>
  <depend>nav2_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav2_simple_commander</depend>
  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
